--- a/src/Products/MeetingLalouviere/locales/fr/LC_MESSAGES/plone.po
+++ b/src/Products/MeetingLalouviere/locales/fr/LC_MESSAGES/plone.po
@@ -18,15 +18,15 @@ msgstr ""
 # types
 #. Default: "MeetingCollege"
 msgid "MeetingCollege"
-msgstr "SÃ©ance du CollÃ¨ge communal"
+msgstr "Séance du Collège communal"
 
 #. Default: "MeetincCouncil"
 msgid "MeetingCouncil"
-msgstr "SÃ©ance du Conseil communal"
+msgstr "Séance du Conseil communal"
 
 #. Default: "MeetingItemCollege"
 msgid "MeetingItemCollege"
-msgstr "Point CollÃ¨ge communal"
+msgstr "Point Collège communal"
 
 #. Default: "MeetingItemCouncil"
 msgid "MeetingItemCouncil"
@@ -36,7 +36,7 @@ msgstr "Point Conseil communal"
 # MeetingItem
 #. Default: "Decision"
 msgid "PloneMeeting_label_decision"
-msgstr "DÃ©cision"
+msgstr "Décision"
 
 #. Default: "accept but modify"
 msgid "accept_but_modify"
@@ -44,15 +44,15 @@ msgstr "Accepter avec modifications"
 
 #. Default: "accept_but_modify_done_descr"
 msgid "accept_but_modify_done_descr"
-msgstr "Le point a Ã©tÃ© acceptÃ© avec modifications."
+msgstr "Le point a été accepté avec modifications."
 
 #. Default: "accept_done_descr"
 msgid "accept_done_descr"
-msgstr "Le point a Ã©tÃ© acceptÃ©."
+msgstr "Le point a été accepté."
 
 #. Default: "Accepted but modified"
 msgid "accepted_but_modified"
-msgstr "AcceptÃ© avec modifications"
+msgstr "Accepté avec modifications"
 
 #. Default: "PloneMeeting"
 msgid "app_name"
@@ -73,63 +73,63 @@ msgstr "Vous venez d'annuler le gel de l'ordre du jour."
 
 #. Default: "backToDecided_done_descr"
 msgid "backToDecided_done_descr"
-msgstr "Vous pouvez Ã  nouveau modifier le procÃ¨s-verbal."
+msgstr "Vous pouvez à nouveau modifier le procès-verbal."
 
 #. Default: "backToFrozen_done_descr"
 msgid "backToFrozen_done_descr"
-msgstr "La sÃ©ance est Ã  nouveau gelÃ©e."
+msgstr "La séance est à nouveau gelée."
 
 msgid "backToInCommittee"
 msgstr "Remettre en commission"
 
 #. Default: "send back to in committee"
 msgid "backToInCommittee_done_descr"
-msgstr "La sÃ©ance a Ã©tÃ© remise en commission.  Tous les points qui Ã©taient en conseil sont repassÃ©s en commission."
+msgstr "La séance a été remise en commission.  Tous les points qui étaient en conseil sont repassés en commission."
 
 msgid "backToInCouncil"
 msgstr "Remettre en Conseil communal"
 
 #. Default: "send back to in council"
 msgid "backToInCouncil_done_descr"
-msgstr "La sÃ©ance a Ã©tÃ© remise en conseil communal."
+msgstr "La séance a été remise en conseil communal."
 
 #. Default: "send back"
 msgid "backToItemCreated"
-msgstr "Renvoyer en crÃ©ation"
+msgstr "Renvoyer en création"
 
 #. Default: "This item is back in its initial state. The person who created it (or another creator within the same group) can now modify it and will need to propose it again once finished."
 msgid "backToItemCreated_done_descr"
-msgstr "Le point est revenu dans l'Ã©tat initial de sa crÃ©ation. Lorsque vous ou la personne pouvant corriger le point aura terminÃ©, elle devra le proposer Ã  nouveau."
+msgstr "Le point est revenu dans l'état initial de sa création. Lorsque vous ou la personne pouvant corriger le point aura terminé, elle devra le proposer à nouveau."
 
 #. Default: "bo to item frozen"
 msgid "backToItemFrozen"
-msgstr "Remettre en gelÃ©"
+msgstr "Remettre en gelé"
 
 #. Default: "The decision taken on this item has been canceled."
 msgid "backToItemFrozen_done_descr"
-msgstr "Le point est Ã  nouveau gelÃ©."
+msgstr "Le point est à nouveau gelé."
 
 msgid "backToItemInCommittee"
 msgstr "Remettre en commission"
 
 #. Default: "This item has been send back to the committee."
 msgid "backToItemInCommittee_done_descr"
-msgstr "Le point a Ã©tÃ© remis en commission."
+msgstr "Le point a été remis en commission."
 
 msgid "backToItemInCouncil"
 msgstr "Remettre en Conseil communal"
 
 #. Default: "This item has been send back to the council."
 msgid "backToItemInCouncil_done_descr"
-msgstr "Le point a Ã©tÃ© remis en Conseil communal."
+msgstr "Le point a été remis en Conseil communal."
 
 #. Default: "send back"
 msgid "backToPresented"
-msgstr "Remettre en prÃ©sentÃ©"
+msgstr "Remettre en présenté"
 
 #. Default: "Item freeze has been cancelled."
 msgid "backToPresented_done_descr"
-msgstr "Le gel du point a Ã©tÃ© annulÃ©."
+msgstr "Le gel du point a été annulé."
 
 #. Default: "send back"
 msgid "backToProposedToDirector"
@@ -137,7 +137,7 @@ msgstr "Renvoyer au directeur"
 
 #. Default: "This item has been send back to the director."
 msgid "backToProposedToDirector_done_descr"
-msgstr "Le point a Ã©tÃ© renvoyÃ© au directeur."
+msgstr "Le point a été renvoyé au directeur."
 
 #. Default: "send back"
 msgid "backToProposedToDivisionHead"
@@ -145,7 +145,7 @@ msgstr "Renvoyer au chef de division"
 
 #. Default: "This item has been send back to the division head."
 msgid "backToProposedToDivisionHead_done_descr"
-msgstr "Le point a Ã©tÃ© renvoyÃ© au chef de division."
+msgstr "Le point a été renvoyé au chef de division."
 
 #. Default: "send back"
 msgid "backToProposedToOfficeManager"
@@ -153,7 +153,7 @@ msgstr "Renvoyer au chef de bureau"
 
 #. Default: "This item has been send back to the office manager."
 msgid "backToProposedToOfficeManager_done_descr"
-msgstr "Le point a Ã©tÃ© renvoyÃ© au chef de bureau."
+msgstr "Le point a été renvoyé au chef de bureau."
 
 #. Default: "send back"
 msgid "backToProposedToServiceHead"
@@ -161,39 +161,39 @@ msgstr "Renvoyer au chef de service"
 
 #. Default: "This item has been send back to the service head."
 msgid "backToProposedToServiceHead_done_descr"
-msgstr "Le point a Ã©tÃ© renvoyÃ© au chef de service."
+msgstr "Le point a été renvoyé au chef de service."
 
 #. Default: "The item has been removed from the meeting agenda."
 msgid "backToValidated_done_descr"
-msgstr "Le point a Ã©tÃ© retirÃ© de l'ordre du jour."
+msgstr "Le point a été retiré de l'ordre du jour."
 
 #. Default: "The definitive decisions have been confirmed."
 msgid "close_done_descr"
-msgstr "La sÃ©ance a Ã©tÃ© clÃ´turÃ©e."
+msgstr "La séance a été clôturée."
 
 #. Default: "Create a plonmeeting item from a plonegov item"
 msgid "create_to_meeting-config-council_from_meeting-config-college"
-msgstr "CrÃ©er un point Conseil depuis un point CollÃ¨ge"
+msgstr "Créer un point Conseil depuis un point Collège"
 
 #. Default: "decide_done_descr"
 msgid "decide_done_descr"
-msgstr "Les dÃ©cisions peuvent maintenant Ãªtre encodÃ©es."
+msgstr "Les décisions peuvent maintenant être encodées."
 
 #. Default: "Decisions"
 msgid "decisions"
-msgstr "DÃ©cisions"
+msgstr "Décisions"
 
 #. Default: "The item has been 'delayed'.  If it is the college, is has been duplicated, if it is the council, it has not been duplicated."
 msgid "delay_done_descr"
-msgstr "Le point a Ã©tÃ© reportÃ©.  S'il s'agit d'un point collÃ¨ge, il a Ã©tÃ© dupliquÃ© chez le service proposant afin qu'il puisse facilement le proposer Ã  nouveau."
+msgstr "Le point a été reporté.  S'il s'agit d'un point collège, il a été dupliqué chez le service proposant afin qu'il puisse facilement le proposer à nouveau."
 
 #. Default: "Follow-up needed"
 msgid "follow_up_needed_icon_title"
-msgstr "Un suivi est nÃ©cessaire"
+msgstr "Un suivi est nécessaire"
 
 #. Default: "Follow-up provided but still printed in the dashboard"
 msgid "follow_up_provided_icon_title"
-msgstr "Un suivi a Ã©tÃ© apportÃ© mais le point est encore imprimÃ© dans le tableau de bord"
+msgstr "Un suivi a été apporté mais le point est encore imprimé dans le tableau de bord"
 
 #. Default: "Freeze"
 msgid "freeze"
@@ -202,11 +202,11 @@ msgstr "Geler"
 # transitions descriptions
 #. Default: "freeze_done_descr"
 msgid "freeze_done_descr"
-msgstr "L'ordre du jour est maintenant gelÃ©."
+msgstr "L'ordre du jour est maintenant gelé."
 
 #. Default: "frozen"
 msgid "frozen"
-msgstr "GelÃ©e"
+msgstr "Gelée"
 
 #. Default: "In committee"
 msgid "in_committee"
@@ -231,11 +231,11 @@ msgstr "En attente des avis"
 
 #. Default: "itemfreeze_done_descr"
 msgid "itemfreeze_done_descr"
-msgstr "Le point a Ã©tÃ© gelÃ©."
+msgstr "Le point a été gelé."
 
 #. Default: "frozen"
 msgid "itemfrozen"
-msgstr "GelÃ©"
+msgstr "Gelé"
 
 #. Default: "Description"
 msgid "meeting_item_description"
@@ -247,153 +247,153 @@ msgstr "Accepter provisoirement"
 
 #. Default: "pre_accept_done_descr"
 msgid "pre_accept_done_descr"
-msgstr "Le point a Ã©tÃ© acceptÃ© provisoirement."
+msgstr "Le point a été accepté provisoirement."
 
 #. Default: "Pre accepted"
 msgid "pre_accepted"
-msgstr "AcceptÃ© provisoirement"
+msgstr "Accepté provisoirement"
 
 msgid "proposeToBudgetImpactReviewer"
 msgstr "Proposer au correspondant financier"
 
 #. Default: "proposeToBudgetImpactReviewer_done_descr"
 msgid "proposeToBudgetImpactReviewer_done_descr"
-msgstr "Le point a Ã©tÃ© envoyÃ© au correspondant financier."
+msgstr "Le point a été envoyé au correspondant financier."
 
 msgid "proposeToDirector"
 msgstr "Proposer au directeur"
 
 #. Default: "proposeToDirector_done_descr"
 msgid "proposeToDirector_done_descr"
-msgstr "Le point a Ã©tÃ© envoyÃ© au directeur."
+msgstr "Le point a été envoyé au directeur."
 
 msgid "proposeToDivisionHead"
 msgstr "Proposer au chef de division"
 
 #. Default: "proposeToDivisionHead_done_descr"
 msgid "proposeToDivisionHead_done_descr"
-msgstr "Le point a Ã©tÃ© envoyÃ© au chef de division."
+msgstr "Le point a été envoyé au chef de division."
 
 msgid "proposeToOfficeManager"
 msgstr "Proposer au chef de bureau"
 
 #. Default: "proposeToOfficeManager_done_descr"
 msgid "proposeToOfficeManager_done_descr"
-msgstr "Le point a Ã©tÃ© envoyÃ© au chef de bureau."
+msgstr "Le point a été envoyé au chef de bureau."
 
 msgid "proposeToServiceHead"
 msgstr "Proposer au chef de service"
 
 #. Default: "proposeToServiceHead_done_descr"
 msgid "proposeToServiceHead_done_descr"
-msgstr "Le point a Ã©tÃ© envoyÃ© au chef de service."
+msgstr "Le point a été envoyé au chef de service."
 
 #. Default: "Proposed to budget impact reviewer"
 msgid "proposed_to_budgetimpact_reviewer"
-msgstr "ProposÃ© au correspondant financier"
+msgstr "Proposé au correspondant financier"
 
 #. Default: "Proposed to director"
 msgid "proposed_to_director"
-msgstr "ProposÃ© au directeur"
+msgstr "Proposé au directeur"
 
 #. Default: "Proposed to division head"
 msgid "proposed_to_divisionhead"
-msgstr "ProposÃ© au chef de division"
+msgstr "Proposé au chef de division"
 
 #. Default: "Proposed to office manager"
 msgid "proposed_to_officemanager"
-msgstr "ProposÃ© au chef de bureau"
+msgstr "Proposé au chef de bureau"
 
 #. Default: "Proposed to service head"
 msgid "proposed_to_servicehead"
-msgstr "ProposÃ© au chef de service"
+msgstr "Proposé au chef de service"
 
 #. Default: "refuse_done_descr"
 msgid "refuse_done_descr"
-msgstr "Le point a Ã©tÃ© refusÃ©."
+msgstr "Le point a été refusé."
 
 msgid "remove"
-msgstr "Retirer de la sÃ©ance"
+msgstr "Retirer de la séance"
 
 #. Default: "Removed from meeting"
 msgid "removed"
-msgstr "RetirÃ© de la sÃ©ance"
+msgstr "Retiré de la séance"
 
 msgid "return_to_secretary"
-msgstr "Renvoyer au secrÃ©tariat"
+msgstr "Renvoyer au secrétariat"
 
 #. Default: "return_to_secretary_done_descr"
 msgid "return_to_secretary_done_descr"
-msgstr "Le point a Ã©tÃ© renvoyÃ© au SecrÃ©tariat communal."
+msgstr "Le point a été renvoyé au Secrétariat communal."
 
 msgid "return_to_secretary_in_committee"
-msgstr "Renvoyer au secrÃ©tariat"
+msgstr "Renvoyer au secrétariat"
 
 #. Default: "return_to_secretary_in_committee_done_descr"
 msgid "return_to_secretary_in_committee_done_descr"
-msgstr "Le point a Ã©tÃ© renvoyÃ© au SecrÃ©tariat communal."
+msgstr "Le point a été renvoyé au Secrétariat communal."
 
 msgid "return_to_secretary_in_council"
-msgstr "Renvoyer au secrÃ©tariat"
+msgstr "Renvoyer au secrétariat"
 
 #. Default: "return_to_secretary_in_council_done_descr"
 msgid "return_to_secretary_in_council_done_descr"
-msgstr "Le point a Ã©tÃ© renvoyÃ© au SecrÃ©tariat communal."
+msgstr "Le point a été renvoyé au Secrétariat communal."
 
 msgid "return_to_service"
 msgstr "Renvoyer au service pour corrections"
 
 #. Default: "return_to_service_done_descr"
 msgid "return_to_service_done_descr"
-msgstr "Le point a Ã©tÃ© renvoyÃ© au service."
+msgstr "Le point a été renvoyé au service."
 
 #. Default: "Returned to service"
 msgid "returned_to_service"
-msgstr "RenvoyÃ© au service pour corrections"
+msgstr "Renvoyé au service pour corrections"
 
 #. Default: "The item has been sent to the college."
 msgid "sendto_meeting-config-college_success"
-msgstr "Ce point a Ã©tÃ© envoyÃ© au CollÃ¨ge communal."
+msgstr "Ce point a été envoyé au Collège communal."
 
 #. Default: "The item has been sent to the council."
 msgid "sendto_meeting-config-council_success"
-msgstr "Ce point a Ã©tÃ© envoyÃ© au Conseil communal."
+msgstr "Ce point a été envoyé au Conseil communal."
 
 #. Default: "The creator of this item does not exist in the meeting config you try to send the item to!"
 msgid "sendtocouncil_error_no_corresponding_meetingconfigfolder"
-msgstr "Le crÃ©ateur de ce point n'a pas d'accÃ¨s dans la partie Conseil communal, le point n'a pas pu Ãªtre transfÃ©rÃ©!"
+msgstr "Le créateur de ce point n'a pas d'accès dans la partie Conseil communal, le point n'a pas pu être transféré!"
 
 #. Default: "The meeting config you try to send the item to does not exist!"
 msgid "sendtocouncil_error_no_existing_meetingconfig"
-msgstr "Le type de sÃ©ance vers laquelle vous souhaitez envoyer ce point n'existe pas!"
+msgstr "Le type de séance vers laquelle vous souhaitez envoyer ce point n'existe pas!"
 
 msgid "setInCommittee"
 msgstr "Mettre en commission"
 
 #. Default: "setInCommittee_done_descr"
 msgid "setInCommittee_done_descr"
-msgstr "La sÃ©ance est passÃ©e en commission."
+msgstr "La séance est passée en commission."
 
 msgid "setInCouncil"
 msgstr "Mettre en Conseil communal"
 
 #. Default: "setInCouncil_done_descr"
 msgid "setInCouncil_done_descr"
-msgstr "La sÃ©ance est passÃ©e en Conseil communal."
+msgstr "La séance est passée en Conseil communal."
 
 msgid "setItemInCommittee"
 msgstr "Mettre en commission"
 
 #. Default: "setItemInCommittee_done_descr"
 msgid "setItemInCommittee_done_descr"
-msgstr "Le point est passÃ© en Commission."
+msgstr "Le point est passé en Commission."
 
 msgid "setItemInCouncil"
 msgstr "Mettre en Conseil communal"
 
 #. Default: "setItemInCouncil_done_descr"
 msgid "setItemInCouncil_done_descr"
-msgstr "Le point est passÃ© en Conseil communal."
+msgstr "Le point est passé en Conseil communal."
 
 #. Default: "Some items are still under corrections in services"
 msgid "some_item_still_in_service"
@@ -404,17 +404,16 @@ msgid "validate"
 msgstr "Valider"
 
 msgid "validateByBudgetImpactReviewer"
-msgstr "Valider les infos budgÃ©taires"
+msgstr "Valider les infos budgétaires"
 
 #. Default: "validateByBudgetImpactReviewer_done_descr"
 msgid "validateByBudgetImpactReviewer_done_descr"
-msgstr "Les informations budgÃ©taires ont Ã©tÃ© validÃ©es."
+msgstr "Les informations budgétaires ont été validées."
 
 #. Default: "The item has been validated."
 msgid "validate_done_descr"
-msgstr "Le point a Ã©tÃ© validÃ©: il est maintenant visible par le gestionnaire de sÃ©ance, qui peut dÃ©cider de le prÃ©senter Ã  l'ordre du jour d'une sÃ©ance."
+msgstr "Le point a été validé: il est maintenant visible par le gestionnaire de séance, qui peut décider de le présenter à l'ordre du jour d'une séance."
 
 #. Default: "Validated"
 msgid "validated"
-msgstr "ValidÃ©"
-
+msgstr "Validé"
