Finished tests overrides, see ticket #6362

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,9 +1,9 @@
 Products.MeetingLalouviere Changelog
 ====================================
 
-3.0dev (unreleased)
--------------------
-- Nothing changed yet
+3.0.3dev (unreleased)
+---------------------
+- Adapted all tests to call PloneMeeting ones
 
 2.1.2 (2012-09-19)
 ------------------
