Added finance advice to getDeliberation, added specific document to print finance advice, see ticket #9256

--- a/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
+++ b/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
@@ -502,3 +502,11 @@ msgstr ""
 #. Default: "Waiting advices"
 msgid "icon_help_itemcreated_waiting_advices"
 msgstr ""
+
+#. Default: "Reference"
+msgid "MeetingLalouviere_label_advice_reference"
+msgstr ""
+
+#. Default: "Enter a reference for this advice if necessary."
+msgid "MeetingLalouviere_label_advice_reference_descr"
+msgstr ""
