trunk is now dev

--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,7 +1,11 @@
 Products.MeetingLalouviere Changelog
 ====================================
 
-3.2.0.1 (unreleased)
+3.3 (unreleased)
+----------------
+- Nothing yet
+
+3.2.0.1 (2014-09-15)
 --------------------
 - Adapted code regarding changes in PloneMeeting : workflow, import_data, tests
 - Hide some no more used item decision : 'refuse', 'delay' and 'remove', kept
@@ -10,6 +14,9 @@ Products.MeetingLalouviere Changelog
   'return to proposing group'
 - Use default PloneMeeting permissions 'PloneMeeting: Read/Write budget infos'
   instead of 'MeetingLalouviere: Read/Write budget infos'
+- Added field meetingadvice.advice_reference to be able to define finance advice
+  reference number.  To be removed when going to PloneMeeting 3.3 where this field
+  already exists... 
 
 3.1.0 (2013-11-12)
 ------------------
