first save changes

--- a/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
+++ b/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
@@ -15,6 +15,10 @@ msgstr ""
 msgid "hs_welcome_title"
 msgstr ""
 
+#. Default: "Synthesis finance advices"
+msgid "searchitemswithfinanceadvice"
+msgstr ""
+
 # MeetingGroup
 #. Default: "Signatures delegation"
 msgid "MeetingLalouviere_label_signatures"
@@ -434,10 +438,6 @@ msgstr ""
 msgid "icon_help_follow_up_provided"
 msgstr ""
 
-#. Default: "Accepted but modified"
-msgid "icon_help_accepted_but_modified"
-msgstr ""
-
 #. Default: "Proposed to director"
 msgid "icon_help_proposed_to_director"
 msgstr ""
@@ -484,4 +484,68 @@ msgstr ""
 
 #. Default: "If you check this box, when a meeting will be decided, if an item does not have a decision defined, this decision will be automatically filled with title and description of the item"
 msgid "init_item_decision_if_empty_on_decide"
+msgstr ""
+
+#. Default: "Add a finances advice"
+msgid "add_new_meetingadvicefinances"
+msgstr ""
+
+#. Default: "Items to control completeness of"
+msgid "searchitemstocontrolcompletenessof"
+msgstr ""
+
+#. Default: "Advices proposed to financial controller"
+msgid "searchadviceproposedtocontroller"
+msgstr ""
+
+#. Default: "Advices proposed to financial editor"
+msgid "searchadviceproposedtoeditor"
+msgstr ""
+
+#. Default: "Advices proposed to financial reviewer"
+msgid "searchadviceproposedtoreviewer"
+msgstr ""
+
+#. Default: "Advices proposed to financial manager"
+msgid "searchadviceproposedtomanager"
+msgstr ""
+
+#. Default: "Unfavorable opinion"
+msgid "negative_finance"
+msgstr ""
+
+#. Default: "Not given opinion"
+msgid "not_given_finance"
+msgstr ""
+
+#. Default: "Favorable opinion"
+msgid "positive_finance"
+msgstr ""
+
+#. Default: "Favorable opinion with remarks"
+msgid "positive_with_remarks_finance"
+msgstr ""
+
+#. Default: "Cautious opinion"
+msgid "cautious_finance"
+msgstr ""
+
+#. Default: "Not required opinion"
+msgid "not_required_finance"
+msgstr ""
+
+#. Default: "Financial controllers"
+msgid "financialcontrollers"
+msgstr ""
+
+#. Default: "Financial editors"
+msgid "financialeditors"
+msgstr ""
+
+#. Default: "Financial reviewers"
+msgid "financialreviewers"
+msgstr ""
+
+#. Default: "Financial managers"
+msgid "financialmanagers"
 msgstr ""
