--- a/src/Products/MeetingLalouviere/locales/fr/LC_MESSAGES/plone.po
+++ b/src/Products/MeetingLalouviere/locales/fr/LC_MESSAGES/plone.po
@@ -15,6 +15,14 @@ msgstr ""
 "Domain: plone\n"
 "X-is-fallback-for: fr-be fr-ca fr-lu fr-mc fr-ch fr-fr\n"
 
+#. Default: "MeetingBourgmestre"
+msgid "MeetingBourgmestre"
+msgstr "Séance du Bourgmestre"
+
+#. Default: "MeetingCoDir"
+msgid "MeetingCoDir"
+msgstr "Séance du Comité de Direction"
+
 # types
 #. Default: "MeetingCollege"
 msgid "MeetingCollege"
@@ -24,6 +32,14 @@ msgstr "Séance du Collège communal"
 msgid "MeetingCouncil"
 msgstr "Séance du Conseil communal"
 
+#. Default: "MeetingItemBourgmestre"
+msgid "MeetingItemBourgmestre"
+msgstr "Point Bourgmestre"
+
+#. Default: "MeetingItemCoDir"
+msgid "MeetingItemCoDir"
+msgstr "Point Comité de Direction"
+
 #. Default: "MeetingItemCollege"
 msgid "MeetingItemCollege"
 msgstr "Point Collège communal"
@@ -32,19 +48,43 @@ msgstr "Point Collège communal"
 msgid "MeetingItemCouncil"
 msgstr "Point Conseil communal"
 
+#. Default: "MeetingItemRecurringBourgmestre"
+msgid "MeetingItemRecurringBourgmestre"
+msgstr "Point récurrent Bourgmestre"
+
+#. Default: "MeetingItemRecurringCoDir"
+msgid "MeetingItemRecurringCoDir"
+msgstr "Point récurrent Comité de Direction"
+
+#. Default: "MeetingItemRecurringCollege"
+msgid "MeetingItemRecurringCollege"
+msgstr "Point récurrent Collège Communal"
+
+#. Default: "MeetingItemRecurringCouncil"
+msgid "MeetingItemRecurringCouncil"
+msgstr "Point récurrent Conseil Communal"
+
+#. Default: "MeetingItemTemplateBourgmestre"
+msgid "MeetingItemTemplateBourgmestre"
+msgstr "Modèle de point Bourgmestre"
+
+#. Default: "MeetingItemTemplateCoDir"
+msgid "MeetingItemTemplateCoDir"
+msgstr "Modèle de point Comité de Direction"
+
+#. Default: "MeetingItemTemplateCollege"
+msgid "MeetingItemTemplateCollege"
+msgstr "Modèle de point Collège Communal"
+
+#. Default: "MeetingItemTemplateCouncil"
+msgid "MeetingItemTemplateCouncil"
+msgstr "Modèle de point Conseil Communal"
+
 # various
 # MeetingItem
 #. Default: "Decision"
 msgid "PloneMeeting_label_decision"
 msgstr "Décision"
-
-#. Default: "accept but modify"
-msgid "accept_but_modify"
-msgstr "Accepter avec modifications"
-
-#. Default: "Accepted but modified"
-msgid "accepted_but_modified"
-msgstr "Accepté avec modifications"
 
 # Workflow transitions
 #. Default: "Ask advices"
@@ -57,23 +97,11 @@ msgstr "Remettre en commission"
 msgid "backToInCouncil"
 msgstr "Remettre en Conseil communal"
 
-#. Default: "send back"
-msgid "backToItemCreated"
-msgstr "Renvoyer en création"
-
-#. Default: "bo to item frozen"
-msgid "backToItemFrozen"
-msgstr "Remettre en gelé"
-
 msgid "backToItemInCommittee"
 msgstr "Remettre en commission"
 
 msgid "backToItemInCouncil"
 msgstr "Remettre en Conseil communal"
-
-#. Default: "send back"
-msgid "backToPresented"
-msgstr "Remettre en présenté"
 
 #. Default: "send back"
 msgid "backToProposedToDirector"
@@ -83,6 +111,22 @@ msgstr "Renvoyer au directeur"
 msgid "backToProposedToDivisionHead"
 msgstr "Renvoyer au chef de division"
 
+#. Default: "Send back to 'financial controller'"
+msgid "backToProposedToFinancialController"
+msgstr "Renvoyer au contrôleur financier"
+
+#. Default: "Send back to 'financial editor'"
+msgid "backToProposedToFinancialEditor"
+msgstr "Renvoyer au rédacteur financier"
+
+#. Default: "Send back to 'financial manager'"
+msgid "backToProposedToFinancialManager"
+msgstr "Renvoyer au Directeur financier"
+
+#. Default: "Send back to 'financial reviewer'"
+msgid "backToProposedToFinancialReviewer"
+msgstr "Renvoyer au validateur financier"
+
 #. Default: "send back"
 msgid "backToProposedToOfficeManager"
 msgstr "Renvoyer au chef de bureau"
@@ -91,13 +135,26 @@ msgstr "Renvoyer au chef de bureau"
 msgid "backToProposedToServiceHead"
 msgstr "Renvoyer au chef de service"
 
-#. Default: "Create a plonmeeting item from a plonegov item"
+#. Default: "Create an item college from an item CoDir"
+msgid "create_to_meeting-config-college_from_codir"
+msgstr "Envoyer vers Collège Communal"
+
+#. Default: "Create an item college from an item council"
+msgid "create_to_meeting-config-college_from_meeting-config-council"
+msgstr "Envoyer vers Collège Communal"
+
+#. Default: "Create an item council from an item college"
+#, fuzzy
 msgid "create_to_meeting-config-council_from_meeting-config-college"
 msgstr "Créer un point Conseil depuis un point Collège"
 
 #. Default: "Decisions"
 msgid "decisions"
 msgstr "Décisions"
+
+#. Default: "Financial advice signed"
+msgid "financial_advice_signed"
+msgstr "Avis finances signé"
 
 #. Default: "Freeze"
 msgid "freeze"
@@ -145,6 +202,22 @@ msgstr "Proposer au directeur"
 msgid "proposeToDivisionHead"
 msgstr "Proposer au chef de division"
 
+#. Default: "Propose to financial controller"
+msgid "proposeToFinancialController"
+msgstr "Proposer au contrôleur financier"
+
+#. Default: "Propose to financial editor"
+msgid "proposeToFinancialEditor"
+msgstr "Proposer au rédacteur financier"
+
+#. Default: "Propose to financial manager"
+msgid "proposeToFinancialManager"
+msgstr "Proposer au Directeur financier"
+
+#. Default: "Propose to financial reviewer"
+msgid "proposeToFinancialReviewer"
+msgstr "Proposer au validateur financier"
+
 msgid "proposeToOfficeManager"
 msgstr "Proposer au chef de bureau"
 
@@ -162,6 +235,22 @@ msgstr "Proposé au directeur"
 #. Default: "Proposed to division head"
 msgid "proposed_to_divisionhead"
 msgstr "Proposé au chef de division"
+
+#. Default: "Proposed to financial controller"
+msgid "proposed_to_financial_controller"
+msgstr "Proposé au contrôleur financier"
+
+#. Default: "Proposed to financial editor"
+msgid "proposed_to_financial_editor"
+msgstr "Proposé au rédacteur financier"
+
+#. Default: "Proposed to financial manager"
+msgid "proposed_to_financial_manager"
+msgstr "Proposé au Directeur financier"
+
+#. Default: "Proposed to financial reviewer"
+msgid "proposed_to_financial_reviewer"
+msgstr "Proposé au validateur financier"
 
 #. Default: "Proposed to office manager"
 msgid "proposed_to_officemanager"
@@ -218,6 +307,10 @@ msgstr "Mettre en commission"
 msgid "setItemInCouncil"
 msgstr "Mettre en Conseil communal"
 
+#. Default: "Sign financial advice"
+msgid "signFinancialAdvice"
+msgstr "Signer l'avis finances"
+
 #. Default: "Some items are still under corrections in services"
 msgid "some_item_still_in_service"
 msgstr "Certains points sont toujours dans des services pour corrections"
@@ -232,4 +325,3 @@ msgstr "Valider les infos budgétaires"
 #. Default: "Validated"
 msgid "validated"
 msgstr "Validé"
-
