--- a/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
+++ b/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
@@ -549,3 +549,15 @@ msgstr ""
 #. Default: "Financial managers"
 msgid "financialmanagers"
 msgstr ""
+
+#. Default: "SearchItemsTofollow_up_yes"
+msgid "searchItemsTofollow_up_yes"
+msgstr ""
+
+#. Default: "SearchItemsToProviderNotToPrint"
+msgid "searchItemsToProviderNotToPrint"
+msgstr ""
+
+#. Default: "SearchItemsForDashboard"
+msgid "searchItemsForDashboard"
+msgstr "
