fine tuning for production

--- a/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
+++ b/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
@@ -561,3 +561,16 @@ msgstr ""
 #. Default: "SearchItemsForDashboard"
 msgid "searchItemsForDashboard"
 msgstr "
+
+#. Default: "Validation by CEO and Alderman"
+msgid "wa_validate_by_dg_and_alderman"
+msgstr ""
+
+
+#. Default: "Items proposed to ceo"
+msgid "searchproposedtodg"
+msgstr ""
+
+#. Default: "Items proposed to alderman"
+msgid "searchproposedtoalderman"
+msgstr ""
