added wfadaptation validation

--- a/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
+++ b/src/Products/MeetingLalouviere/locales/PloneMeeting.pot
@@ -574,3 +574,7 @@ msgstr ""
 #. Default: "Items proposed to alderman"
 msgid "searchproposedtoalderman"
 msgstr ""
+
+#. Default: "You can not unselect the 'Validation by CEO and Alderman' adaptation as there are still items in state 'proposed to CEO' or 'proposed to alderman'."
+msgid "wa_removed_validate_by_dg_and_alderman_error"
+msgstr ""
