--- a/src/Products/MeetingLalouviere/locales/fr/LC_MESSAGES/plone.po
+++ b/src/Products/MeetingLalouviere/locales/fr/LC_MESSAGES/plone.po
@@ -339,3 +339,27 @@ msgstr "Valider les infos budgétaires"
 #. Default: "Validated"
 msgid "validated"
 msgstr "Validé"
+
+#. Default: "Waiting advices (proposed_to_alderman)"
+msgid "proposed_to_alderman_waiting_advices"
+msgstr "En attente des avis (Proposé à l'Échevin)"
+
+#. Default: "Waiting advices (proposed_to_dg)"
+msgid "proposed_to_dg_waiting_advices"
+msgstr "En attente des avis (Proposé au DG)"
+
+#. Default: "Waiting advices (proposed_to_director)"
+msgid "proposed_to_director_waiting_advices"
+msgstr "En attente des avis (Proposé au directeur)"
+
+#. Default: "Waiting advices (proposed_to_divisionhead)"
+msgid "proposed_to_divisionhead_waiting_advices"
+msgstr "En attente des avis (Proposé au chef de division)"
+
+#. Default: "Waiting advices (proposed_to_officemanager)"
+msgid "proposed_to_officemanager_waiting_advices"
+msgstr "En attente des avis (Proposé au chef de bureau)"
+
+#. Default: "Waiting advices (proposed_to_servicehead)"
+msgid "proposed_to_servicehead_waiting_advices"
+msgstr "En attente des avis (Proposé au chef de service)"
