--- a/src/Products/MeetingLalouviere/locales/plone.pot
+++ b/src/Products/MeetingLalouviere/locales/plone.pot
@@ -358,3 +358,27 @@ msgstr ""
 #. Default: "Send back to 'financial manager'"
 msgid "backToProposedToFinancialManager"
 msgstr ""
+
+#. Default: "Waiting advices (proposed_to_alderman)"
+msgid "proposed_to_alderman_waiting_advices"
+msgstr "Waiting advices (proposed_to_alderman)"
+
+#. Default: "Waiting advices (proposed_to_dg)"
+msgid "proposed_to_dg_waiting_advices"
+msgstr ""
+
+#. Default: "Waiting advices (proposed_to_director)"
+msgid "proposed_to_director_waiting_advices"
+msgstr ""
+
+#. Default: "Waiting advices (proposed_to_divisionhead)"
+msgid "proposed_to_divisionhead_waiting_advices"
+msgstr ""
+
+#. Default: "Waiting advices (proposed_to_officemanager)"
+msgid "proposed_to_officemanager_waiting_advices"
+msgstr ""
+
+#. Default: "Waiting advices (proposed_to_servicehead)"
+msgid "proposed_to_servicehead_waiting_advices"
+msgstr ""
